# float_crystal

./: .gitignore  CMakeLists.txt  IC.py  PBMS.py  SecondNuclear.py  analy  clean.sh  crystal.py  exec.sh  get_update.sh  init  job.run  job.run.bak  jobIC.run  joburea.run  jupyter_init.sh  killjobs.sh  makefile  nohup.out  plot-Copy1.ipynb  plot-Copy2.ipynb  plot.ipynb  point.h  polymer.cpp  polymer.h  polymer.ipynb  polymerEf.ipynb  pyroom.cpp  pyroom.h  pyroom.py  readfiles.py  readme.md  room.cpp  room.e  room.h  run.sh  urea.ipynb  ureamain
.ipynb_checkpoints/: plot-Copy1-checkpoint.ipynb  plot-Copy2-checkpoint.ipynb  plot-checkpoint.ipynb  polymer-checkpoint.ipynb  polymerEf-checkpoint.ipynb  urea-checkpoint.ipynb
analyze/: analyze.cpp
cpp/: ConnectedComponent.cpp  ConnectedComponent.h  log.h  main.cpp  point.h  polymer.cpp  polymer.h  room.cpp  room.h  utils.h  vec.h
draw/: Ep1  draw.html  polymer.js  server.go
python/: CMakeLists.txt  IC.py  PBMS.py  SecondNuclear.py  SecondNuclear48.py  cal_meltorcrystalpoint.py  cal_rh_sim.py  crystal.pyd  drawfiles.py  float_crystal.pyd  makefile  pycrystal.cpp  pyroom.cpp  pyroom.h  pyroom.py  readfiles.py  run.py  setup.py
run/: ICmain.cpp  ICsimulator.cpp  foldmain copy.cpp  foldmain.cpp  foldsimulator.cpp  log.h  main  main.cpp  myerror.h  processpool.h  scripts  simulator.cpp  test.cpp  test_thread.cpp  threadpool.cpp  threadpool.h  ureamain.cpp
